--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "engines": {
+    "node": "18.13.0"
+  },
   "name": "YelpCamp",
   "version": "1.0.0",
   "description": "",
@@ -13,11 +16,14 @@
     "@mapbox/mapbox-sdk": "^0.15.5",
     "cloudinary": "^1.41.3",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^3.2.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.5",
     "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.1",
+    "helmet": "^7.1.0",
     "joi": "^17.2.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.10.4",
@@ -25,6 +31,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.0.1"
+    "passport-local-mongoose": "^6.0.1",
+    "sanitize-html": "^2.13.0"
   }
 }
